<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_wallpaper"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_winner"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/ic_winner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/tv_winner_player"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_winner" />

    <TextView

        android:id="@+id/tv_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/bg_play_again"
        android:ellipsize="end"
        android:fontFamily="@font/font_vt323"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/tv_play_again"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_winner" />

    <TextView
        android:id="@+id/tv_dismiss_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_bottom_right_shadow"
        android:fontFamily="@font/font_vt323"
        android:paddingHorizontal="@dimen/_28sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/text_dismiss_dialog"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_play_again" />


</androidx.constraintlayout.widget.ConstraintLayout>